dotnet-postgres-k8s-crud/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crudapi-ingress
  namespace: crud-demo
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: crud.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: crudapi
                port:
                  number: 8080
